--- a/playground.css
+++ b/playground.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  padding: 30px;
 }
 
 /* Style the header */
@@ -13,6 +14,12 @@ header {
   text-align: center;
   font-size: 35px;
   color: white;
+}
+
+.myheader {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 /* Create two columns/boxes that floats next to each other */
