--- a/playground.css
+++ b/playground.css
@@ -19,7 +19,7 @@ header {
 .myheader {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
 }
 
 /* Create two columns/boxes that floats next to each other */
