--- a/playground.css
+++ b/playground.css
@@ -22,6 +22,28 @@ header {
   align-items: center;
 }
 
+.container2 {
+  display: flex;
+}
+
+.block {
+  width: 300px;
+  height: 300px;
+} 
+
+#block1 {
+  background: #7FFFD4;
+}
+
+#block2 {
+  background: #8A2BE2;
+  flex-basis: 50%;
+}
+
+#block3 {
+  background: #6495ED;
+}
+
 #myBtn {
   margin-top: 10px;
 }
